/*
 * Licensed to the Apache Software Foundation (ASF) under one or more
 * contributor license agreements.  See the NOTICE file distributed with
 * this work for additional information regarding copyright ownership.
 * The ASF licenses this file to You under the Apache License, Version 2.0
 * (the "License"); you may not use this file except in compliance with
 * the License.  You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto3";

package multiprotos;

message SecondRequest {
    string message = 1;
}

message SecondResponse {
    string message = 1;
}

service SecondService {
    rpc Service1 (SecondRequest) returns (SecondResponse) {}
    rpc Service2 (SecondRequest) returns (stream SecondResponse) {}
    rpc Service3 (stream SecondRequest) returns (SecondResponse) {}
    rpc Service4 (stream SecondRequest) returns (stream SecondResponse) {}
}
